--- a/front/src/pages/Calendar/style.css
+++ b/front/src/pages/Calendar/style.css
@@ -9,7 +9,7 @@
 }
 
 .calendar-page-header {
-    height: 60px;
+    height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -23,6 +23,8 @@
     font-size: 18px;
     font-weight: bold;
     color: white;
+    line-height: normal;
+    /* 글씨 잘림 방지 */
 }
 
 .calendar-page-header .calendar-back-btn {
@@ -36,6 +38,24 @@
     width: 40px;
     height: 40px;
     border-radius: 50%;
+}
+
+/* 알림 아이콘 */
+.icon-wrapper {
+    width: 56px !important;
+    height: 56px !important;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.icon-alarm {
+    width: 36px !important;
+    height: 36px !important;
+    background-image: url("../../components/Element/alarm_icon.svg");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 .calendar-content-sheet {
