--- a/front/src/pages/Welcome/style.css
+++ b/front/src/pages/Welcome/style.css
@@ -3,8 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 852px;
-  min-width: 393px;
+  height: 100vh;
   width: 100%;
 }
 
